--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "require": {
     "php": ">=5.6.0",
     "laravel/lumen-framework": "~5",
+    "doctrine/dbal": "~2",
     "vlucas/phpdotenv": "~2",
     "filp/whoops": "~2"
   },
