--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "php": ">=5.6.0",
     "laravel/lumen-framework": "~5",
     "doctrine/dbal": "~2",
+    "illuminate/redis": "~5",
+    "predis/predis": "~1",
     "vlucas/phpdotenv": "~2",
     "filp/whoops": "~2"
   },
