some tests added

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,6 @@ DB_DATABASE = pipedrive
 DB_USERNAME = pipedrive
 DB_PASSWORD = pipedrive
 
-CACHE_DRIVER = array
+CACHE_DRIVER = redis
+
+MAX_RELATIONS_PER_PAGE = 100
