--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME = pipedrive-test
+APP_NAME = organisations-test
 
 APP_TIMEZONE = "Asia/Bangkok"
 
@@ -6,13 +6,13 @@ APP_ENV = dev
 APP_DEBUG = true
 APP_KEY = 3vvw14Ewfs7JDB8m4W2cnweUCabLtd
 
-LOGS_PATH = /var/log/pipedrive-test
+LOGS_PATH = /var/log/organisations-test
 
 DB_CONNECTION = mysql
 DB_HOST = localhost
-DB_DATABASE = pipedrive
-DB_USERNAME = pipedrive
-DB_PASSWORD = pipedrive
+DB_DATABASE = organisations
+DB_USERNAME = organisations
+DB_PASSWORD = organisations
 
 CACHE_DRIVER = redis
 
