--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,10 @@
 APP_NAME = organisations-test
 
-APP_TIMEZONE = "Asia/Bangkok"
+APP_KEY = dL3Cs2VV1IfxMYoZ8V86dxLXCpSTPMU1
 
-APP_ENV = dev
-APP_DEBUG = true
-APP_KEY = 3vvw14Ewfs7JDB8m4W2cnweUCabLtd
-
+LOGS_FORMATTER = simple
 LOGS_PATH = /var/log/organisations-test
+LOGGED_OUTPUT = false
 
 DB_CONNECTION = mysql
 DB_HOST = localhost
@@ -17,3 +15,5 @@ DB_PASSWORD = organisations
 CACHE_DRIVER = redis
 
 MAX_RELATIONS_PER_PAGE = 100
+
+SENTRY_DSN = https://***@sentry.io/1390459
